	PR c++/16273 	* class.c (count_depth_data): New type. 	(dfs_depth_post): New function. 	(dfs_depth_q): Likewise. 	(find_final_overrider_data_s): Change type of vpath. 	Add vpath_list. 	(dfs_find_final_overrider_1): New function. 	(dfs_find_final_overrider): Use it. 	(dfs_find_final_overrider_q): Adjust use of vpath. 	(dfs_find_final_overrider_post): Likewise. 	(find_final_overrider): Use dfs_depth.  Allocate and deallocate 	vpath_list.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@85886 138bc75d-0d04-0410-961f-82ee72b054a4